k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 406193642614.dkr.ecr.us-east-1.amazonaws.com/backend-app
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
